lesson13 update comments